@@ -2,19 +2,27 @@
 #define Pds_DgSummary_hh
 
 #include "pds/utility/Appliance.hh"
+#include "pds/client/XtcIterator.hh"
 
 #include "pds/service/GenericPool.hh"
 
 namespace Pds {
-  class DgSummary : public Appliance {
+  class SummaryDg;
+
+  class DgSummary : public Appliance,
+		    public XtcIterator {
   public:
     DgSummary();
     ~DgSummary();
   public:
     Transition* transitions(Transition* tr);
     InDatagram* events     (InDatagram* dg);
+  public:
+    int process(const Xtc&, InDatagramIterator*);
   private:
-    GenericPool _pool;
+    SummaryDg*  _out;
+    GenericPool _dgpool;
+    GenericPool _itpool;
   };
 };
 
